home page DOM JS code and css styling
created html code -> used that to write the JS code

--- a/src/template.html
+++ b/src/template.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <title>Restaurant</title>
 </head>
 <body>
@@ -12,10 +14,19 @@
                 <div class="Home">Home</div>
                 <div class="Menu">Menu</div>
                 <div class="About">About</div>
-                <div class="About">About2</div>
             </nav>
         </header>
-        <div class="content">Content</div>
+        <!-- <div class="content">
+            <main class="home">
+                <h2 class="brand">Rick & Morty's</h2>
+                <h2 class="name">Dimension Dine-In</h2>
+                <p class="info">Tired of eating from just one planet? At Dimension Dine-In, we blend flavors from across the cosmos – curated by Rick himself (mostly while drunk) and taste-tested by Morty (against his will).</p>
+                <button class="view-menu">View Menu</button>
+            </main>
+        </div> -->
+        <div class="content">
+            
+        </div>
         <footer>Developed with ♥ by Utkarsh Singh</footer>
     </div>
     
