menu page DOM JS code and css styling

--- a/src/template.html
+++ b/src/template.html
@@ -24,6 +24,36 @@
                 <button class="view-menu">View Menu</button>
             </main>
         </div> -->
+        <!-- <div class="content">
+            <main class="menu">
+                <h2 class="brand">Rick & Morty's</h2>
+                <h2 class="name">Menu</h2>
+                <div class="menu-item">
+                    <h3 class="item-name">Plumbus Poppers</h3>
+                    <p class="item-info">Spicy, cheesy bites straight from Dimension C-137.</p>
+                    <h4 class="item-price">20 $chmeckles</h4>
+                    <hr class="menu-separator">
+                </div>
+                <div class="menu-item">
+                    <h3 class="item-name">Morty’s Mini Meeseeks </h3>
+                    <p class="item-info">Bite-sized blue balls of happiness (Not actual Meeseeks, promise.)</p>
+                    <h4 class="item-price">15 $chmeckles</h4>
+                    <hr class="menu-separator">
+                </div>
+                <div class="menu-item">
+                    <h3 class="item-name">Portal Punch</h3>
+                    <p class="item-info">Glows neon green. Not FDA approved.</p>
+                    <h4 class="item-price">25 $chmeckles</h4>
+                    <hr class="menu-separator">
+                </div>
+                <div class="menu-item">
+                    <h3 class="item-name">Wubba Lubba Limonade</h3>
+                    <p class="item-info">Sharp lemon with a subtle existential dread finish.</p>
+                    <h4 class="item-price">19 $chmeckles</h4>
+                    <hr class="menu-separator">
+                </div>
+            </main>
+        </div> -->
         <div class="content">
             
         </div>
