about page DOM JS code and css styling

--- a/src/template.html
+++ b/src/template.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <title>Restaurant</title>
 </head>
+
 <body>
     <div class="body">
         <header>
@@ -54,11 +56,25 @@
                 </div>
             </main>
         </div> -->
-        <div class="content">
-            
-        </div>
+        <!-- <div class="content">
+            <main class="about">
+                <h2 class="brand">Rick & Morty's</h2>
+                <h2 class="name">About</h2>
+                <p class="about-info">
+                    Founded in a drunken haze by Rick Sanchez, Dimension Dine-In is the only eatery that transcends
+                    space and time. Whether you’re a Gromflomite, Meeseeks, or just a regular Earthling, we promise a
+                    culinary journey that messes with your taste buds and your timeline.
+                </p>
+                <p> Morty handles customer complaints (he’s not great at it), and Summer occasionally DJ’s Tuesday Taco
+                    Night.</p>
+                <p>We don’t take reservations – we bend spacetime to fit everyone in.
+                </p>
+            </main>
+        </div> -->
+        <div class="content"></div>
         <footer>Developed with ♥ by Utkarsh Singh</footer>
     </div>
-    
+
 </body>
+
 </html>
